@startuml RegexProgram
title Regex Detector Program UML (State Pattern)

skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

package "state.regex" {
	interface Detector {
		+detect(input: String): Boolean
	}

	interface State {
		+handle(context: ContextDetector, token: String): void
		+onEnd(context: ContextDetector): void
	}

	abstract class ContextDetector {
		-tokens: List<String>
		-index: Int
		-terminal: Boolean
		-accepted: Boolean
		#currentState: State
		+detect(input: String): Boolean
		+nextToken(): String?
		+transitionTo(state: State): void
		+reject(): void
		+accept(): void
		#createInitialState(): State
		#beforeDetection(): void
		#afterInputConsumed(): void
		-splitToSingleCharacterTokens(input: String): List<String>
	}

	object TokenRules {
		+isDigit(token: String): Boolean
		+isNonZeroDigit(token: String): Boolean
		+isUppercase(token: String): Boolean
		+isSpecial(token: String): Boolean
		+isSpace(token: String): Boolean
	}

	class IntegerDetector
	class FloatingPointDetector
	class BinaryOnesDetector
	class EmailAddressDetector
	class PasswordDetector {
		#createInitialState(): State
	}

	Detector <|.. ContextDetector
	ContextDetector o--> State : currentState
	ContextDetector <|-- IntegerDetector
	ContextDetector <|-- FloatingPointDetector
	ContextDetector <|-- BinaryOnesDetector
	ContextDetector <|-- EmailAddressDetector
	ContextDetector <|-- PasswordDetector

	IntegerDetector ..> TokenRules
	FloatingPointDetector ..> TokenRules
	BinaryOnesDetector ..> TokenRules
	EmailAddressDetector ..> TokenRules
	PasswordDetector ..> TokenRules

	!include detectors/IntegerDetectorFragment.puml
	!include detectors/FloatingPointDetectorFragment.puml
	!include detectors/BinaryOnesDetectorFragment.puml
	!include detectors/EmailAddressDetectorFragment.puml
	!include detectors/PasswordDetectorFragment.puml
}

note bottom of ContextDetector
Input is split into one-character String tokens.
Each state handles one token at a time.
end note

note right of ContextDetector
detect(input) is the template method.
createInitialState(), beforeDetection(), and afterInputConsumed() are the hooks.
end note

@enduml
